# django-neapolitan-sundae

./: 4.0  README.rst  pyproject.toml
src/neapolitan_sundae/: __init__.py  views.py
src/neapolitan_sundae/helpers/: forms.py
src/neapolitan_sundae/templatetags/: neapolitan.py
tests/: tests.py
